[package]
name = "insurance-contract"
version = "0.1.0"
description = "Parametric Insurance Smart Contract for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "insurance_contract"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
spl-token = "4.0.0"
spl-associated-token-account = "2.0.0"
pyth-sdk-solana = "0.9.0"
switchboard-v2 = "0.4.0"

[dev-dependencies]
solana-program-test = "1.16.0"
tokio = { version = "1.0", features = ["macros"] }
assert_matches = "1.5.0"